--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,11 @@ scikit-learn==1.3.1
 scipy==1.11.3
 sortedcontainers==2.4.0
 tqdm==4.66.1
+chex==0.1.83
+dm-haiku==0.0.10
+jax==0.4.18
+jaxlib==0.4.18  # https://jax.readthedocs.io/en/latest/installation.html#nvidia-gpu
+# pip install "jax[cuda12_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+lz4==4.3.2
+optax==0.1.7
+tensorboardX==2.6.2.2
